--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -397,7 +397,7 @@ document.getElementById("lightbox").style.display="none";
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u/local/pressure-washing-carcroft.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-carcroft.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -413,72 +413,15 @@ document.getElementById("lightbox").style.display="none";
 "latitude": 53.583,
 "longitude": -0.180
 },
-"areaServed": [
-{"@type": "Place", "name": "Carcroft"}
-],
-"makesOffer": [
-{
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Pressure Washing Service",
-"description": "Pressure washing service available in Carcroft.",
-"serviceType": "Pressure Washing Service",
-"areaServed": ["Carcroft"]
-}
+"areaServed": {
+"@type": "Place",
+"name": "Carcroft"
 },
-{
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Pressure Washing Driveways",
-"description": "Pressure cleaning drives and patios in Carcroft.",
-"serviceType": "Pressure Washing Driveways",
-"areaServed": ["Carcroft"]
-}
-},
-{
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Pressure Cleaning Walls",
-"description": "Pressure cleaning brick and rendered walls in Carcroft.",
-"serviceType": "Pressure Cleaning Walls",
-"areaServed": ["Carcroft"]
-}
-},
-{
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Jet Cleaning Decking",
-"description": "Pressure washing for restoring wooden decking in Carcroft.",
-"serviceType": "Jet Cleaning Decking",
-"areaServed": ["Carcroft"]
-}
-},
-{
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Full Range of Pressure Washing Services",
-"description": "Full list of pressure washing services we provide in  Carcroft.",
-"serviceType": "Full Range of Pressure Washing Services",
-"areaServed": ["Carcroft"]
-}
-}
-],
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
 "dayOfWeek": [
-"Monday",
-"Tuesday",
-"Wednesday",
-"Thursday",
-"Friday",
-"Saturday",
-"Sunday"
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
 ],
 "opens": "00:00",
 "closes": "23:59"
