--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -413,10 +413,7 @@ document.getElementById("lightbox").style.display="none";
 "latitude": 53.583,
 "longitude": -0.180
 },
-"areaServed": {
-"@type": "Place",
-"name": "Carcroft"
-},
+"areaServed": "Carcroft",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
