--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -13,6 +13,11 @@
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
 /* HEADER STYLING */
 header{
 text-align:center;
