--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -205,45 +205,35 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <!-- ✅ FAQ SECTION -->
 <section style="max-width:900px; margin:40px auto; padding:0 15px;">
 
-<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Skellow</h2>
 
 <div>
-<p><strong>How much does pressure washing cost?</strong><br>
-Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins.</p>
+<p><strong>What affects the cost of pressure washing?</strong><br>
+Pricing depends on factors such as surface size, material type, and the level of dirt or staining present. We provide free quotes so you know the full cost before work begins.</p>
 
-<p><strong>Will pressure washing damage my surfaces?</strong><br>
-No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage.</p>
+<p><strong>Is pressure washing suitable for all surfaces?</strong><br>
+Yes, when carried out correctly. We adjust pressure levels and cleaning methods to suit each surface, ensuring safe and effective results.</p>
 
-<p><strong>Do you use your own water and electricity?</strong><br>
-We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options.</p>
+<p><strong>Do I need to be at home during the cleaning?</strong><br>
+Not necessarily. As long as we have access to the areas being cleaned and a water supply, work can usually be completed without you being present</p>
 
-<p><strong>Do I need to prepare anything before you arrive?</strong><br>
-We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely.</p>
+<p><strong>How often should exterior surfaces be cleaned?</strong><br>
+Most homes benefit from pressure washing once per year, although shaded or high-traffic areas may require more frequent cleaning.</p>
 
-<p><strong>How often should my driveway or patio be cleaned?</strong><br>
-Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning.</p>
+<p><strong>Can you deal with oil stains and heavy discolouration?</strong><br>
+Many stubborn stains can be significantly reduced or fully removed using specialist treatments alongside pressure washing.</p>
 
-<p><strong>Can you remove oil, rust, and heavy stains?</strong><br>
-Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing.</p>
+<p><strong>Is pressure washing environmentally friendly?</strong><br>
+We focus on water-efficient cleaning and can use eco-friendly products where required.</p>
 
-<p><strong>Is pressure washing safe for pets and plants?</strong><br>
-Yes. We take care around gardens and can use eco-friendly products when needed.</p>
+<p><strong>How long does it take for surfaces to dry?</strong><br>
+Most areas are safe to walk on within one to two hours, depending on weather conditions.</p>
 
-<p><strong>How long before I can use the area again?</strong><br>
-Most surfaces can be walked on after 1–2 hours once they are dry.</p>
+<p><strong>Do you offer services for businesses as well as homes?</strong><br>
+Yes, we clean both residential and commercial properties, including shops, offices, and industrial premises.</p>
 
-<p><strong>Do you clean commercial properties as well as homes?</strong><br>
-Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings.</p>
-
-<p><strong>What if I’m not happy with the result?</strong><br>
-Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue.</p>
-
-<p><strong>Do you offer sealing after cleaning?</strong><br>
-Yes. We can apply protective sealants to help prevent weeds, stains, and water damage.</p>
-
-<p><strong>Are you insured to work on my property?><p><strong>
-Yes. We are fully insured, giving you peace of mind while we work.</p>
-</div>
+<p><strong>Are you fully insured?</strong><br>
+Yes, we are fully insured, giving customers peace of mind throughout the cleaning process.</p>
 
 </section>
 
@@ -293,99 +283,74 @@ document.getElementById("lightbox").style.display="none";
 "mainEntity": [
 {
 "@type": "Question",
-"name": "How much does pressure washing cost?",
+"name": "What affects the cost of pressure washing?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins."
+"text": "Pricing depends on factors such as surface size, material type, and the level of dirt or staining present. We provide free quotes so you know the full cost before work begins."
 }
 },
 {
 "@type": "Question",
-"name": "Will pressure washing damage my surfaces?",
+"name": "Is pressure washing suitable for all surfaces?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage."
+"text": "Yes, when carried out correctly. We adjust pressure levels and cleaning methods to suit each surface, ensuring safe and effective results."
 }
 },
 {
 "@type": "Question",
-"name": "Do you use your own water and electricity?",
+"name": "Do I need to be at home during the cleaning?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options."
+"text": "Not necessarily. As long as we have access to the areas being cleaned and a water supply, work can usually be completed without you being present."
 }
 },
 {
 "@type": "Question",
-"name": "Do I need to prepare anything before you arrive?",
+"name": "How often should exterior surfaces be cleaned?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely."
+"text": "Most homes benefit from pressure washing once per year, although shaded or high-traffic areas may require more frequent cleaning."
 }
 },
 {
 "@type": "Question",
-"name": "How often should my driveway or patio be cleaned?",
+"name": "Can you deal with oil stains and heavy discolouration?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning."
+"text": "Many stubborn stains can be significantly reduced or fully removed using specialist treatments alongside pressure washing."
 }
 },
 {
 "@type": "Question",
-"name": "Can you remove oil, rust, and heavy stains?",
+"name": "Is pressure washing environmentally friendly?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing."
+"text": "We focus on water-efficient cleaning and can use eco-friendly products where required."
 }
 },
 {
 "@type": "Question",
-"name": "Is pressure washing safe for pets and plants?",
+"name": "How long does it take for surfaces to dry?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes. We take care around gardens and can use eco-friendly products when needed."
+"text": "Most areas are safe to walk on within one to two hours, depending on weather conditions."
 }
 },
 {
 "@type": "Question",
-"name": "How long before I can use the area again?",
+"name": "Do you offer services for businesses as well as homes?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Most surfaces can be walked on after 1–2 hours once they are dry."
+"text": "Yes, we clean both residential and commercial properties, including shops, offices, and industrial premises."
 }
 },
 {
 "@type": "Question",
-"name": "Do you clean commercial properties as well as homes?",
+"name": "Are you fully insured?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings."
-}
-},
-{
-"@type": "Question",
-"name": "What if I’m not happy with the result?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue."
-}
-},
-{
-"@type": "Question",
-"name": "Do you offer sealing after cleaning?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes. We can apply protective sealants to help prevent weeds, stains, and water damage."
-}
-},
-{
-"@type": "Question",
-"name": "Are you insured to work on my property?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes. We are fully insured, giving you peace of mind while we work."
-}
+"text": "Yes, we are fully insured, giving customers peace of mind throughout the cleaning process."
 }
 ]
 }
@@ -397,7 +362,7 @@ document.getElementById("lightbox").style.display="none";
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-carcroft.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-skellow.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -410,10 +375,10 @@ document.getElementById("lightbox").style.display="none";
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.583,
-"longitude": -0.180
+"latitude": 53.589,
+"longitude": -1.191
 },
-"areaServed": "Carcroft",
+"areaServed": "Skellow",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
