--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -240,8 +240,8 @@ Yes, we are fully insured, giving customers peace of mind throughout the cleanin
 
 <!-- Close -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Ready to Refresh Your Property?</h2>
-<p>After reviewing our services and FAQs, you can see how professional pressure washing improves appearance, safety, and value. Whether it’s a driveway, patio, decking, or full exterior, we’re ready to help. Contact us today for a free quote and let us bring your outdoor spaces back to life with reliable, high-quality cleaning.</p>
+<h2>Trusted Pressure Washing Services in Skellow</h2>
+<p>Professional pressure washing is a simple way to improve safety, appearance, and long-term surface condition. From driveways and patios to walls and decking, our Skellow pressure washing service delivers reliable results using the correct methods for each surface. We work with homeowners and businesses alike, providing clear pricing and quality workmanship. Contact us today for a free quote and restore your exterior surfaces with confidence.</p>
 </section>
 
 <!-- ✅ BOTTOM CALL BUTTON -->
