--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -131,7 +131,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Outdoor surfaces around properties in Skellow are constantly exposed to changing weather conditions, vehicle traffic, and organic growth. Over time, this exposure causes dirt, algae, moss, lichen, and general staining to build up on driveways, patios, walls, and other exterior surfaces. This not only affects how a property looks but can also create slippery, unsafe areas and contribute to long-term surface deterioration if left untreated. Our pressure washing services in Skellow are designed to remove this build-up efficiently and safely, restoring surfaces to a cleaner, brighter condition.</p>
 <p>We use professional-grade pressure washing equipment combined with the correct cleaning techniques for each surface type. Before starting any work, surfaces are assessed to ensure the right pressure levels and methods are used, whether the area is block paving, concrete, tarmac, natural stone, or another material. This careful approach allows us to achieve deep, thorough cleaning results without causing damage. For homeowners and businesses in Skellow, pressure washing is a practical and cost-effective way to improve appearance, increase safety, and protect outdoor surfaces from premature wear.</p>
 <img src="/images/pressure-washing-patios.webp"
-alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface."
+alt="Professional pressure washing in Skellow removing built-up dirt and algae from outdoor surfaces around a residential property"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -144,7 +144,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Driveways are one of the most heavily used areas of any property and are often the first feature people notice when arriving. In Skellow, driveways regularly accumulate oil stains, tyre marks, algae, moss, and ingrained dirt from daily use and exposure to the elements. This build-up can make the surface look tired and neglected while also increasing the risk of slips, especially during wet or icy conditions. Professional driveway pressure washing removes these contaminants from deep within the surface, restoring a cleaner and more even appearance.</p>
 <p>Our driveway cleaning service is suitable for block paving, concrete, tarmac, and natural stone surfaces. We carefully adjust pressure levels and techniques to suit the material, ensuring effective cleaning without loosening blocks or damaging the surface structure. In addition to improving visual appeal, regular driveway pressure washing helps protect against long-term issues such as staining, weed growth, and moisture retention. Many Skellow property owners choose driveway cleaning to enhance kerb appeal, maintain property value, and keep entrances safe and well presented throughout the year.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface"
+alt="Driveway pressure washing in Skellow lifting oil stains, tyre marks, and moss from block paving using professional equipment"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -157,7 +157,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Patios and decking areas are designed to be enjoyed, but they are also highly vulnerable to dirt, algae, moss, and food or drink spills. In shaded or damp areas of Skellow, green growth can develop quickly, making surfaces slippery and unattractive. Pressure washing is an effective way to remove this build-up, restoring outdoor areas to a cleaner and safer condition. Our patio and decking cleaning service targets surface grime while preserving the integrity of the material underneath.</p>
 <p>We clean a wide range of surfaces, including concrete slabs, natural stone, porcelain paving, wooden decking, and composite boards. Each surface is treated differently, with pressure levels and cleaning techniques carefully selected to prevent damage such as surface etching or splintering. Cleaning patios and decking not only improves appearance but also extends the lifespan of the materials by preventing moisture retention and surface breakdown. For homeowners in Skellow, pressure washing is a practical solution for refreshing garden spaces and preparing outdoor areas for regular use, entertaining, or seasonal enjoyment.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt="Pressure cleaning exterior wall in Carcroft removing dirt, algae and weather stains from brickwork"
+alt="Patio and decking pressure washing in Skellow restoring a slippery outdoor seating area to a clean and safe finish"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -170,7 +170,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Exterior walls are constantly exposed to pollution, weathering, and organic growth, all of which can leave properties looking dull and uncared for over time. In Skellow, brickwork, render, stone, and cladding often develop algae staining, moss patches, and traffic-related grime that standard cleaning methods cannot remove effectively. Pressure cleaning is a proven solution for lifting these contaminants and restoring walls to a fresher, cleaner appearance.</p>
 <p>Our exterior wall cleaning service uses professional equipment and controlled pressure to safely clean different wall surfaces without causing damage. Before work begins, we assess the condition and material of the walls to ensure the correct approach is used. Cleaning exterior walls not only improves visual appeal but also helps protect the structure by removing growth that traps moisture and contributes to long-term deterioration. Regular wall cleaning can reduce maintenance costs, prevent permanent staining, and extend the life of exterior finishes. For both residential and commercial properties in Skellow, clean walls create a stronger first impression and demonstrate that a property is well maintained.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt="Pressure washing wooden decking in Carcroft to remove dirt, moss, and algae."
+alt="Exterior wall pressure cleaning in Skellow removing traffic pollution and algae from brickwork and rendered surfaces"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -195,7 +195,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <li>Commercial yards, car parks, and access areas</li>
 </ul>
 <img src="/images/pressure-washing-algae.webp"
-alt="Pressure washing service including driveways, patios, decking, walls, roofs, gutters, cladding, fences and commercial exteriors"
+alt="Complete pressure washing service in Skellow covering driveways, patios, walls, and exterior surfaces for homes and businesses"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
