--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -9,7 +9,7 @@
 <title>Pressure Washing Skellow - Driveway, Patio & Exterior Cleaning Services</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-skellow.html">
-<meta name="description" content="Local pressure washing services in skellow. Driveways, patios, decking, walls and exterior cleaning carried out safely with professional results.">
+<meta name="description" content="Local pressure washing services in Skellow. Driveways, patios, decking, walls and exterior cleaning carried out safely with professional results.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -187,7 +187,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <li>Patios and paved seating areas</li>
 <li>Decking and steps</li>
 <li>Paths and walkways</li>
-<li>Brick, stone and rendered walls/li>
+<li>Brick, stone and rendered walls</li>
 <li>Fences, gates and garden walls</li>
 <li>Garage Doors and cladding</li>
 <li>Gutters, fascias and soffits</li>
@@ -263,17 +263,6 @@ Yes, we are fully insured, giving customers peace of mind throughout the cleanin
 
 
 </footer>
-
- <!-- ✅ LIGHTBOX SCRIPT -->
-<script>
-function openLightbox(src, alt){
-document.getElementById("lightbox").style.display="flex";
-document.getElementById("lightboxImg").src=src;
-}
-function closeLightbox(){
-document.getElementById("lightbox").style.display="none";
-}
-</script>
 
 <!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
 <script type="application/ld+json">
