--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/pressure-washing.html">
 <title>Pressure Washing Quote Calculator</title>
 <style>
 body { font-family: Arial, sans-serif; margin: 20px; background: #f7f7f7; }
